--- a/css/styles.css
+++ b/css/styles.css
@@ -36,8 +36,7 @@
     color: black;
   } 
 
-  .message-count{
-    right: 0px;
+  .message-count, .delete-count{
     float: right;
     padding-right: 1rem;
   }
